--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body id="gradient">
     <header>
-      <h1>THIS IS the original titleAAA</h1>
+      <h1>Cool title</h1>
     </header>
     <div class="container">
       <div class="colorPicker">
