--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body id="gradient">
-    <header>
-      <h1>Cool title</h1>
-    </header>
+    <header></header>
     <div class="container">
       <div class="colorPicker">
         <input class="color1" type="color" name="color1" value="#ff0000" />
