--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <h3></h3>
     </div>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
